--- a/algorithms/pom.xml
+++ b/algorithms/pom.xml
@@ -47,6 +47,11 @@
 			<version>4.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
